--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@varie/babel-preset-app",
+  "name": "varie/babel-preset-app",
   "version": "0.0.1",
   "description": "Babel presets for a Varie application",
   "main": "index.js",
