--- a/package.json
+++ b/package.json
@@ -12,5 +12,14 @@
   "bugs": {
     "url": "https://github.com/variejs/babel-preset-varie-app/issues"
   },
-  "homepage": "https://varie.io/docs/latest/varie-bundler"
+  "homepage": "https://varie.io/docs/latest/varie-bundler",
+  "dependencies": {
+    "@babel/core": "^7.1.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.1.0",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/runtime": "^7.1.5",
+    "babel-plugin-transform-runtime": "^6.23.0"
+  }
 }
