--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-varie-app",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "Babel presets for a Varie application",
   "main": "index.js",
   "repository": {
@@ -19,6 +19,7 @@
     "@babel/plugin-transform-runtime": "^7.1.0",
     "@babel/preset-env": "^7.1.6",
     "@babel/runtime": "^7.1.5",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0"
   }
