--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-varie-app",
-  "version": "0.1.2",
+  "version": "0.1.3-beta",
   "description": "Babel presets for a Varie application",
   "main": "index.js",
   "repository": {
@@ -15,15 +15,15 @@
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.2.0",
-    "@babel/preset-env": "^7.2.3",
-    "@babel/runtime": "^7.2.0",
-    "@babel/runtime-corejs2": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/runtime": "^7.3.4",
+    "@babel/runtime-corejs2": "^7.3.4",
     "@vue/babel-preset-jsx": "^1.0.0-beta.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "core-js": "^2.6.1"
+    "core-js": "^2.6.5"
   },
   "files": [
     "polyfillsPlugin.js"
