--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-varie-app",
-  "version": "0.1.3-beta",
+  "version": "0.1.3",
   "description": "Babel presets for a Varie application",
   "main": "index.js",
   "repository": {
