--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@babel/plugin-transform-runtime": "^7.4.0",
     "@babel/preset-env": "^7.4.2",
     "@babel/runtime": "^7.4.2",
-    "@babel/runtime-corejs2": "^7.4.2",
+    "@babel/runtime-corejs3": "^7.4.2",
     "@vue/babel-preset-jsx": "^1.0.0-beta.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-plugin-dynamic-import-node": "^2.2.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "core-js": "^2.6.5"
+    "core-js": "^3.0.0"
+  },
+  "peerDependencies": {
+    "@babel/core" : "^7.4.0"
   },
   "files": [
     "polyfillsPlugin.js"
