--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "babel-preset-varie-app",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Babel presets for a Varie application",
   "main": "index.js",
   "repository": {
@@ -15,15 +15,15 @@
   "dependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-jsx": "^7.2.0",
-    "@babel/plugin-transform-runtime": "^7.4.0",
-    "@babel/preset-env": "^7.4.2",
-    "@babel/runtime": "^7.4.2",
-    "@babel/runtime-corejs3": "^7.4.2",
-    "@vue/babel-preset-jsx": "^1.0.0-beta.2",
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/runtime": "^7.7.2",
+    "@babel/runtime-corejs3": "^7.7.2",
+    "@vue/babel-preset-jsx": "^1.1.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-plugin-dynamic-import-node": "^2.2.0",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
-    "core-js": "^3.0.0"
+    "core-js": "^3.4.1"
   },
   "peerDependencies": {
     "@babel/core": "^7.4.0"
